feat: add password strength result

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -73,8 +73,15 @@
           </label>
         </div>
         <!-- strength -->
-        <div>
+        <div class="strength-div">
           <h2 class="strength">Strength</h2>
+          <div class="password-strength-div">
+            <h2 class="medium">medium</h2>
+            <div class="password-strength"></div>
+            <div class="password-strength"></div>
+            <div class="password-strength"></div>
+            <div class="password-strength"></div>
+          </div>
         </div>
         <button class="btn">Generate</button>
       </div>
