feat: add tablet version

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -83,7 +83,14 @@
             <div class="password-strength"></div>
           </div>
         </div>
-        <button class="btn">Generate</button>
+        <button class="btn">
+          <h2 class="generate">Generate</h2>
+          <img
+            class="arrow-img"
+            src="assets/images/icon-arrow-right.svg"
+            alt=""
+          />
+        </button>
       </div>
     </div>
   </body>
