--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -27,6 +27,7 @@
             class="copy-img"
             src="assets/images/icon-copy.svg"
             alt="copy image"
+            onclick="copied()"
           />
         </div>
       </div>
@@ -69,7 +70,7 @@
         <div class="strength-div">
           <h2 class="strength">Strength</h2>
           <div class="password-strength-div">
-            <h2 class="medium">medium</h2>
+            <h2 class="medium"></h2>
             <div class="password-strength first"></div>
             <div class="password-strength second"></div>
             <div class="password-strength third"></div>
